Fix more-menu visibility.

--- a/scss/partials/_stream_collapsed_item.scss
+++ b/scss/partials/_stream_collapsed_item.scss
@@ -58,6 +58,18 @@ div.stream-collapsed-item {
 
   &.expandable {
     cursor: pointer;
+
+    @include big_web() {
+    &:hover {
+      div.more-menu {
+        display: initial;
+
+        button {
+          display: initial;
+        }
+      }
+    }
+  }
   }
 
   &.unread-item {
